Fix overflow on Vosk partial results

--- a/src/scss/textbox.scss
+++ b/src/scss/textbox.scss
@@ -55,3 +55,20 @@
     width: 100%;
 }
 
+#partial-container {
+    display: flex; 
+    justify-content: center;
+    white-space: nowrap;
+}
+
+#partial {
+    width: 25%;
+    min-width: 350px;
+    color: #4C6777;
+    display: inline-block;
+    overflow-x: hidden;
+    height: 1rem;
+    direction: rtl;
+    text-align: center;
+}
+
